fix(web-components): fixes issue with long options label in ic-select
label now truncates with ellipsis

--- a/packages/web-components/src/components/ic-menu/ic-menu.css
+++ b/packages/web-components/src/components/ic-menu/ic-menu.css
@@ -156,6 +156,7 @@
 
 .check-icon {
   height: var(--ic-space-lg);
+  min-width: var(--ic-space-lg);
   width: var(--ic-space-lg);
   margin-left: var(--ic-space-xs);
   pointer-events: none;
